[NNO-12666] - Зависимость fetch источников данных. Срабатывание по изменению поля